tests/should_fail/recursive_types/nonpositive.stderr
error: Illegal recursive type
  --> nonpositive.rs:14:1
   |
14 | pub struct Bad(SemiopaqueOption<Bad>);
   | ^^^^^^^^^^^^^^ --------------------- Recursive occurrence of Bad under parameter 0 of type `SemiopaqueOption`

error: aborting due to 1 previous error

